on my way to open-sourcing my slightly changed (improved?) version now that i found it again on github